--- a/src/components/widgetSm/product.css
+++ b/src/components/widgetSm/product.css
@@ -1,42 +1,50 @@
-.widgetsm {
+.products{
   flex: 1;
   -webkit-box-shadow: 0px 0px 15px -10px #000000;
   box-shadow: 0px 0px 15px -10px #000000;
   padding: 20px;
 }
-.widgetsmimage {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  cursor: pointer;
-  object-fit: cover;
-}
-.widgetsmtitle {
-  font-size: 32px;
-  font-weight: 600;
-}
-.widgetsmlist {
-  margin: 0;
-  padding: 0%;
-  list-style: none;
-}
-.widgetsmlistitm {
+.productlist {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 20px 0px;
 }
-.widgetsmuser {
-  display: flex;
-  flex-direction: column;
+.productimage {
+  width: 40px;
+  height: 40px;
+  border-radius: 60%;
+  cursor: pointer;
+  object-fit: cover;
+  margin-right: 20px;
 }
-.widgetsmusername {
+.producttitle {
+  font-size: 32px;
   font-weight: 600;
 }
-.widgetsmusertitle {
+.productlist {
+  margin: 0;
+  padding: 0%;
+  list-style: none;
+}
+.productlistitm {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0px;
+}
+.productuser {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+.productusername {
+  font-weight: 600;
+}
+.productusertitle {
   font-weight: 300;
 }
-.widgetsmbutton {
+.productbutton {
   display: flex;
   align-items: center;
   border: none;
@@ -46,7 +54,12 @@
   color: #555;
   cursor: pointer;
 }
-.widgesmicon {
+.producticon {
   font-size: 16px;
   margin-right: 5px;
 }
+.widgetlgtable {
+  width: 100%;
+  border-spacing: 20px;
+}
+
