--- a/src/pages/productedit/productEdit.css
+++ b/src/pages/productedit/productEdit.css
@@ -1,32 +1,36 @@
-.newProduct {
+.productedit {
     flex: 4;
     margin-left: 20px;
   }
-  .newProductForm {
+  .producteditform {
     display: flex;
-  flex-wrap: wrap;
+    flex-wrap: wrap;
   }
-  .addProductItem{
+  .productedititem {
     width: 400px;
     display: flex;
     flex-direction: column;
     margin-top: 10px;
     margin-right: 20px;
   }
-  .addProductItem > label {
+  .productedititem > label {
     margin-bottom: 10px;
     font-size: 14px;
     font-weight: 600;
     color: grey;
   }
-  .addProductItem > input {
+  .productedititem > input {
+    height: 20px;
     padding: 10px;
-    
+    border: 1px solid grey;
+    border-radius: 5px;
   }
-  .addProductItem>select {
-    padding: 10px;
+  .newusrtgender > label {
+    margin: 10px;
+    font-size: 18px;
+    color: #555;
   }
-  .addProduct {
+  .bu {
     width: 200px;
     border: none;
     background-color: darkblue;
