--- a/src/pages/productList/productLists.css
+++ b/src/pages/productList/productLists.css
@@ -115,10 +115,21 @@
     font-weight: 600;
     border-radius: 10px;
     cursor: pointer;
-    margin-left: 800px;
+    /* //margin-left: 800px; */
   }
   .addProduct2{
     width: 100px;
+    border: none;
+    background-color:green;
+    color: white;
+    padding: 7px 10px;
+    font-weight: 600;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+  .addProduct3{
+    width: 70px;
     border: none;
     background-color:red;
     color: white;
@@ -126,4 +137,18 @@
     font-weight: 600;
     border-radius: 10px;
     cursor: pointer;
+  }
+
+  .addProduct4{
+    width: 80px;
+    border: none;
+    background-color: blue;
+    color: white;
+    padding: 7px 10px;
+    font-weight: 600;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-left: 650px;
+margin-right: 30px;
+height: 30px;
   }
